--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -13,6 +13,10 @@ body {
   .card {
     margin-top: 40px;
   }
+
+  .brand-logo {
+    mix-blend-mode: exclusion;
+  }
 }
 
 .post-ribbon {
